--- a/9.1th june.md
+++ b/9.1th june.md
@@ -1,2 +1,4 @@
+
+Day9 - Hybrid Multi Cloud 10-06-2020
 # Topic : Fetching the details of the instance using Terraform | Terraform variables | Types of Public IP's | Elastic IP
 ![1_0XID8x0ak2xAqA3vt68BHg](https://user-images.githubusercontent.com/49730521/84474790-1598b000-aca9-11ea-9fdd-227bb70acd49.png)
