--- a/9.2th june.md
+++ b/9.2th june.md
@@ -1,2 +1,4 @@
 Day10 - Hybrid Multi Cloud 11-06-2020
 # Topic : Terraform provisioners | Remote system using Terraform
+
+![Teraform remote control](https://user-images.githubusercontent.com/49730521/84476399-b1c3b680-acab-11ea-90cf-25bfe6211c7e.png)
