--- a/12.md
+++ b/12.md
@@ -1,1 +1,2 @@
+# How to configure Kubernetes on various different platforms and using them from a single location
 ![image](https://user-images.githubusercontent.com/49730521/88450975-d5fce080-ce70-11ea-8c00-b00132354e5e.png)
