--- a/12.md
+++ b/12.md
@@ -1,2 +1,2 @@
-# How to configure Kubernetes on various different platforms and using them from a single location
+# What is kubernetes || Why we use kubernetes || How kubernetes helps in deployment of the apps ||  What are podman and cri-o tools used for ||  What is fault tolerant ||  How kubernetes helps in fault tolerance ||  How kubernetes is load balancing || What is kubernetes cluster.
 ![image](https://user-images.githubusercontent.com/49730521/88450975-d5fce080-ce70-11ea-8c00-b00132354e5e.png)
