--- a/12.md
+++ b/12.md
@@ -1,2 +1,3 @@
 # What is kubernetes || Why we use kubernetes || How kubernetes helps in deployment of the apps ||  What are podman and cri-o tools used for ||  What is fault tolerant ||  How kubernetes helps in fault tolerance ||  How kubernetes is load balancing || What is kubernetes cluster.
+Day11 - Hybrid Multi Cloud 14-06-2020
 ![image](https://user-images.githubusercontent.com/49730521/88450975-d5fce080-ce70-11ea-8c00-b00132354e5e.png)
