--- a/12.md
+++ b/12.md
@@ -3,3 +3,5 @@
 Day11 - Hybrid Multi Cloud 14-06-2020
 
 ![image](https://user-images.githubusercontent.com/49730521/88450975-d5fce080-ce70-11ea-8c00-b00132354e5e.png)
+
+A![image](https://user-images.githubusercontent.com/49730521/88451669-2591db00-ce76-11ea-9fd9-256553be101f.png)
