--- a/14.md
+++ b/14.md
@@ -1,1 +1,2 @@
+# What is label and its uses | What is replication controller | How replication controller keep on monitoring pods using selectors | How to create replication controller using yaml code and terraform.
 
